--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "bootstrap": "^4.4.1",
+    "jquery": "1.9.1 - 3",
+    "lodash": "^4.17.15",
+    "popper.js": "^1.16.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
@@ -40,9 +43,5 @@
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
-  },
-  "peerDependencies": {
-    "jquery": "^3.4.1",
-    "popper": "^1.0.1"
   }
 }
